Fix duplicate 'IS' in warning message

--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
             <button class="main-button btn-favorites" onclick="openModal('favorites')">My Favorites</button>
         </div>
         <div class="warning-message">
-            THIS IS ISN'T OFFICIALLY FINISHED YET; I STILL HAVE MANY WORKS TO DO, SO I HAVE TO DISABLE IT
+            THIS ISN'T OFFICIALLY FINISHED YET; I STILL HAVE MANY WORKS TO DO, SO I HAVE TO DISABLE IT
         </div>
     </div>
 
