--- a/index.html
+++ b/index.html
@@ -4077,12 +4077,12 @@ FEEL FREE TO EXPLORE, AND ENJOY YOUR STAY!
         </div>
     </div>
 
-    <!-- Calculator Modal (embeds New folder/calculator.html) -->
+    <!-- Calculator Modal: put calculator.html in same folder as index.html -->
     <div class="modal-overlay" id="calculatorModal" onclick="closeModalOnOverlay(event, 'calculator')">
         <div class="modal-box modal-calculator" onclick="event.stopPropagation()">
             <div class="modal-content modal-calculator-content">
                 <button type="button" class="calculator-close-btn" onclick="closeModal('calculator')" title="Close">×</button>
-                <iframe src="New folder/calculator.html" class="calculator-iframe" title="Scientific Calculator"></iframe>
+                <iframe src="calculator.html" class="calculator-iframe" title="Scientific Calculator"></iframe>
             </div>
         </div>
     </div>
