--- a/index.html
+++ b/index.html
@@ -2121,6 +2121,38 @@
             display: block;
         }
 
+        /* Calculator modal: full screen on mobile so no "Music" or background shows, one clear scroll */
+        @media (max-width: 768px) {
+            #calculatorModal .modal-box,
+            .modal-calculator .modal-box {
+                width: 100vw !important;
+                max-width: 100vw !important;
+                height: 100vh !important;
+                max-height: 100vh !important;
+                margin: 0 !important;
+                border-radius: 0 !important;
+            }
+            .modal-calculator .calculator-iframe {
+                height: 100vh !important;
+                min-height: 100vh !important;
+                border-radius: 0 !important;
+            }
+            .calculator-close-btn {
+                top: 8px;
+                right: 8px;
+                width: 40px;
+                height: 40px;
+                font-size: 24px;
+            }
+        }
+
+        @media (max-width: 768px) and (max-height: 600px) {
+            .modal-calculator .calculator-iframe {
+                height: 100vh !important;
+                min-height: 100vh !important;
+            }
+        }
+
         .modal-music {
             background: linear-gradient(135deg, #fff9c4 0%, #fff59d 100%);
         }
